# fcidump

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  Doxyfile.in  FCIdump.cpp  FCIdump.h  FCIdumpF.F90  FCIdumpF_8F90.html  FCIdump_8cpp.html  FCIdump_8cpp__incl.map  FCIdump_8cpp__incl.md5  FCIdump_8h.html  FCIdump_8h__dep__incl.map  FCIdump_8h__dep__incl.md5  FCIdump_8h__incl.map  FCIdump_8h__incl.md5  FCIdump_8h_source.html  LICENCE.md  LICENCE_8md.html  README.md  README_8md.html  annotated.html  classes.html  classmolpro_1_1FCIdump-members.html  classmolpro_1_1FCIdump.html  dir_3a0534501ca4be4079425efd3c8ffab8.html  dir_492caf90e19a41eb62baa27d42d8112c.html  dir_492caf90e19a41eb62baa27d42d8112c_dep.map  dir_492caf90e19a41eb62baa27d42d8112c_dep.md5  dir_a1d37cdff9af0727843ade7d0ab11df9.html  dir_a1d37cdff9af0727843ade7d0ab11df9_dep.map  dir_a1d37cdff9af0727843ade7d0ab11df9_dep.md5  dir_ab36c7937c95d624fc4c058bf38f15e5.html  dir_ab36c7937c95d624fc4c058bf38f15e5_dep.map  dir_ab36c7937c95d624fc4c058bf38f15e5_dep.md5  dir_c88c9d146ec3d6d0ded72019b17ad932.html  dir_c88c9d146ec3d6d0ded72019b17ad932_dep.map  dir_c88c9d146ec3d6d0ded72019b17ad932_dep.md5  files.html  (+66 more)
DoxygenTagFiles/: fcidump.tag
dependencies/: CMakeLists.txt
docker/: Dockerfile
example/: CMakeLists.txt  example-cpp.cpp
examples/: CMakeLists.txt  example-cpp.cpp  uhf.fcidump
lib/: CMakeLists.txt  FCIdump-config.h.in  FCIdump.cpp  FCIdump.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  namespaces_1.js  pages_0.js  pages_1.js  (+2 more)
src/molpro/: CMakeLists.txt  FCIdump.cpp  FCIdump.h  FCIdumpF.F90
test/: CMakeLists.txt  testFCIdump.cpp
